--- a/css/style.css
+++ b/css/style.css
@@ -29,7 +29,8 @@ display: block;
     --text-color:#757575;
     --border-color:#F5F5F5;
     --icons-grey-color:#AFB1B8;
-    --period-transform: cubic-bezier(0.4, 0, 0.2, 1);
+    --cubic: cubic-bezier(0.4, 0, 0.2, 1);
+    --period: 250ms;
 }
 
 .container {
@@ -108,7 +109,29 @@ ul, ol {
     color: var(--dark-brand-color);
     display: flex;
     gap: 50px;
+    
 }
+
+.header-item {
+    position: relative;
+}
+
+.current-page .header-link {
+    color: var(--brand-color);
+}
+
+.current-page .header-link::after {
+    content: '';
+    position: absolute;
+    left: 0;
+    bottom: -33px;
+    width: 100%;
+    height: 4px;
+    border-radius: 2px;
+
+    background-color: var(--brand-color);
+} 
+
 
 .header-contact-list {
     display: flex;
@@ -127,9 +150,15 @@ ul, ol {
     color: var(--text-color);
 }
 
+.header-link {
+    transition-timing-function: var(--cubic);
+    transition-duration: var(--period);
+}
+
 .header-link:hover,
 .header-link:focus {
     color: var(--brand-color);
+    ;
 }
 
 /* HERO */
@@ -142,7 +171,7 @@ ul, ol {
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
-   }
+}
 
 .hero-title {
     display: block;
@@ -230,7 +259,35 @@ ul, ol {
 .works-list {
     display: flex;
     gap: 30px;
+    
 }
+
+.works-item {
+    position: relative;
+}
+
+.works-description {
+    font-weight: 700;
+    font-size: 14px;
+    line-height: 1.14;
+    letter-spacing: 0.03em;
+    text-transform: uppercase;
+    color: var(--white-brand-color);
+
+    padding-top: 27px;
+    padding-bottom: 27px;
+    text-align: center;
+
+    position: absolute;
+    width: 100%;
+    height: 70px;
+    bottom: 0;
+
+    background-color: #2F303ACC;
+    opacity: 0.8;
+}
+
+
 /* TEAM */
 
 .section-team {
@@ -303,17 +360,17 @@ ul, ol {
     justify-content: center;
     align-items: center;
     fill: var(--icons-grey-color);
+
+    transition-timing-function: var(--cubic);
+    transition-duration: var(--period);
 }
 
 .soc-link-icon-team:hover,
 .soc-link-icon-team:focus {
     background-color: var(--brand-color);
+    fill: #FFFFFF
 }
 
-.soc-link-icon-team:hover,
-.soc-link-icon-team:focus {
-    fill: #FFFFFF
-} 
 
 /* CLIENTS */
 
@@ -333,6 +390,9 @@ ul, ol {
     align-items: center;
     justify-content: center;
     fill: var(--icons-grey-color);
+
+    transition-timing-function: var(--cubic);
+    transition-duration: var(--period);
     }
 
 .clients-icons:hover,
@@ -375,6 +435,9 @@ ul, ol {
     border: transparent;
     border-radius: 4px;
     padding: 6px 22px;
+
+    transition-timing-function: var(--cubic);
+    transition-duration: var(--period);
     }
 
 .filter-list {
@@ -405,6 +468,34 @@ ul, ol {
 
 }
 
+.projects-image {
+    position: relative;
+    overflow: hidden;
+}
+
+.project-text-hover {
+    font-size: 18px;
+    line-height: 1.55;
+    color: #FFFFFF;
+    padding-left: 24px;
+    padding-right: 24px;
+    padding-top: 63px;
+    background-color: rgba(33, 150, 243, 0.9);
+
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: 100%;
+    transform: translateY(100%)
+
+}
+
+.projects-item:hover .project-text-hover {
+    transform: translateY(0%);
+    transition: var(--cubic) var(--period);
+}
+
+
 .projects-description {
     border: 2px solid var(--border-color);
     padding: 20px 24px;
@@ -425,6 +516,11 @@ ul, ol {
     color: var(--text-color);
 }
 
+.project-card {
+    transition-timing-function: var(--cubic);
+    transition-duration: var(--period);
+}
+
 .project-card:hover,
 .project-card:focus {
     box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
@@ -436,6 +532,11 @@ ul, ol {
     padding-top: 60px;
     padding-bottom: 60px;
     background-color: #2F303A;
+}
+
+.address-link {
+    transition-timing-function: var(--cubic);
+    transition-duration: var(--period);
 }
 
 .address-link:hover,
@@ -495,9 +596,66 @@ color: rgba(255, 255, 255, 0.6);
     align-items: center;
     background: rgba(255, 255, 255, 0.1);
     fill: #FFFFFF;
+
+    transition-timing-function: var(--cubic);
+    transition-duration: var(--period);
 }
 
 .soc-link-icon-footer:hover,
 .soc-link-icon-footer:focus {
     background-color: var(--brand-color);
+}
+
+
+
+.backdrop {
+    width: 100%;
+    height: 100%;
+    position: fixed;
+    top: 0;
+    background-color:rgba(0, 0, 0, 0.2);
+    visibility: visible;
+    opacity: 1;
+    transition: opacity var(--period) var(--cubic), visibility var(--period) var(--cubic);
+}
+
+.modal {
+    width: 528px;
+    min-height: 581px;
+    background-color: #FFFFFF;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%) scale(1, 1);
+    border-radius: 4px;
+    box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
+    transition: transform var(--period) var(--cubic);    
+}
+
+.backdrop.is-hidden .modal {
+    transform: translate(0%, 0%) scale(0, 0);
+}
+
+.btn-close {
+    width: 30px;
+    height: 30px;
+    border-radius: 50%;
+    border: 1px solid rgba(0, 0, 0, 0.1);
+    background-color: transparent;
+
+    position: absolute;
+    right: 8px;
+    top: 8px;
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 0;
+
+}
+
+.is-hidden {
+    opacity: 0;
+    visibility: hidden;
+    pointer-events: none;
 }
